crates/lang/tests/ui/contract/fail/module-multiple-storages.stderr
error: encountered multiple ink! storage structs, expected exactly one
 --> tests/ui/contract/fail/module-multiple-storages.rs:4:1
  |
4 | mod contract {
  | ^^^

error: ink! storage struct here
 --> tests/ui/contract/fail/module-multiple-storages.rs:6:5
  |
6 |     pub struct Contract {}
  |     ^^^

error: ink! storage struct here
  --> tests/ui/contract/fail/module-multiple-storages.rs:19:5
   |
19 |     pub struct Contract2 {}
   |     ^^^
